--- a/_posts/2023-03-01-Groups.md
+++ b/_posts/2023-03-01-Groups.md
@@ -1,16 +1,58 @@
 ---
 layout: post
 disqus: y
-title: Grupuri. Definitie. Exemple.
+title: Groups
 ---
 
-Notiunea de grup este fundamentala in matematica si are aplicatii in cele mai variate domenii: teoria ecuatiilor algebrice, teoria ecuatiilor diferentiale, topologie, clasificarea particulelor elementare, cristalografie, teoria relativitatii, teoria structurilor compusilor chimici, muzica. Notiunile de transformare, de invariant, de simetrie se modeleaza cel mai bine cu ajutorul ideii de grup. In acest curs vom da definitia grupului abstract si apoi vom prezenta cateva exemple importante.
+Notiunea de Grup este fundamentala in matematica si are aplicatii in cele mai variate domenii: teoria ecuatiilor algebrice, teoria ecuatiilor diferentiale, topologie, clasificarea particulelor elementare, cristalografie, teoria relativitatii, teoria structurilor compusilor chimici, muzica. Notiunile de transformare, de invariant, de simetrie se modeleaza cel mai bine cu ajutorul ideii de grup. In acest curs vom da definitia grupului abstract si apoi vom prezenta cateva exemple importante.
 
 # Definitie
 
-Se numeste grup o multime nevida G impreuna cu o lege de compozitie "*" astfel incat:
+(G , * ) G x G -> G, (x,y)->x * y
+Se numeste Grup o multime nevida G impreuna cu o lege de compozitie "*" astfel incat:
 
-* i) legea "*" este asociativa: (x * y) *z = x * (y * z)
+* i) legea "*" este asociativa: (x * y) * z = x * (y * z)
 * ii) legea "*" are element neutru x * e = e * x = x
 * iii) orice element din G este simetrizabil: pentru orice x din G, exista un x' din G
 astfel incat x * x' = x' * x = e  
+
+Daca in plus este satisfacuta axioma:
+x * y = y * x, oricare ar fi x, y din G. atunci G se numeste Grup Comutativ sau abelian.
+
+# Exemples:
+
+1) Grupul permutarilor de trei elemente. Fie E = {1,2,3}.
+Sa notam cu G3 multimea tuturor aplicatiilor bijective de la E la E:
+```
+α = 1 2 3
+    1 2 3
+
+β = 1 2 3
+    2 3 1
+
+π = 1 2 3
+    3 1 2
+
+γ = 1 2 3
+    1 3 2
+
+ω = 1 2 3
+    3 2 1
+
+φ = 1 2 3
+    2 1 3
+```
+unde G3 = {φ,ω,γ,π,α,β}
+Cum compusa a doua aplicatii bijective este o aplicatie bijectiva, rezulta ca G3 este o parte stabila a lui P(E) in raport cu operatie de computere a functiilor. Acest lucru rezulta din tabla compunerii permutarilor G3.
+```
+* α φ ω γ π β
+α α φ ω γ π β
+φ φ φ ω γ π β
+ω ω φ ω γ π β
+γ γ φ ω γ π β
+π π φ ω γ π β
+β β φ ω γ π β
+```
+Cum compunerea aplicatiilor este asociativa si 1E = α apartine lui G3, rezulta ca (G3,*) este monoid. Sa observam pe tabla de compozitie ca orice element este simetrizabil. Un monoid G cu proprietatea ca orice element x apartine lui G este simetrizabil in raport cu operatia acestuia se numeste GRUP.
+
+2) (Z,+) este grup abelian, numit grupul aditiv al numerelor intregi. Analog: (Q,+),(R,+),(C,+).
