problems with monoids

--- a/_posts/2023-02-23-monoid.md
+++ b/_posts/2023-02-23-monoid.md
@@ -40,3 +40,69 @@ atunci spunem ca M este monoid comutativ.
 ```
 (M(E),U) si (M(E),∩) sunt monoizi comutativi.
 ```
+
+# Probleme:
+
+1) Pe multimea N, se considera legea de compozitie data prin x * y = x + y + xy,
+oricare ar fi x,y din N. Sa se arate ca
+(N,*) este monoid.
+
+Verificam daca legea de compozitie "*"
+*  este asociativa: (x * y) * z = x * ( y * z)
+* daca exista Element Neutru.
+
+Proof:
+```
+(x * y) * z = (x + y + xy) * z = x + y + xy + z + (x + y + xy)z = x + y + z + xy + xz + yz + xyz
+ x * ( y * z) = x * (y + z + yz) = x + y + z + yz + x (y + z + yz) = x + y + z + xy + xz + yz + xyz
+ ```
+ Se observa ca elementul neutru este 0
+ x * 0 = x + 0 + x0 = x, pentru orice x din N
+
+2) Pe multimea R+ = [0,+infinity], se considera legea de compozitie:
+x * y = (x + y) / (1 + xy). Sa se arate ca (R+, *) este monoid.
+
+* legea de compozitie este asociativa
+* element neutru
+
+Proof:
+
+```
+               x + y
+(x * y) * z =  ------ * z =
+               1 + xy
+
+  x + y             x + y + z + xyz
+  ------- + z       ---------------
+  1 + xy            1 + xy
+= -----------  =   ----------------
+      x + y        1 + xy + xz + yz
+  1 + ------ z     ---------------           
+      1 + xy        1 + xy
+  x + y + z + xyz
+= ----------------  
+  1 + xy + xz + yz
+
+```
+
+```
+                   y + z
+ x * (y * z) = x * ------
+                   1 + yz
+
+    y + z
+x + ------
+    1 + yz     x + y + z + xyz  
+----------- =  ---------------
+      y + z    xy + xz + yz + 1
+1 + x -----    
+      1 + yz             
+
+      Se observa ca 0 este elementul neutru:
+      x * 0 = x
+      x + y    x + 0
+      -----  = ------ = x, oricare ar fi x din R.
+      1 + xy   1 + x0
+
+Q.e.d      
+```
