--- a/_posts/2023-03-01-Grupuri.md
+++ b/_posts/2023-03-01-Grupuri.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 disqus: y
-title: Groups
+title: Grupuri
 ---
 
 Notiunea de Grup este fundamentala in matematica si are aplicatii in cele mai variate domenii: teoria ecuatiilor algebrice, teoria ecuatiilor diferentiale, topologie, clasificarea particulelor elementare, cristalografie, teoria relativitatii, teoria structurilor compusilor chimici, muzica. Notiunile de transformare, de invariant, de simetrie se modeleaza cel mai bine cu ajutorul ideii de grup. In acest curs vom da definitia grupului abstract si apoi vom prezenta cateva exemple importante.
