groups set of problems

--- a/_posts/2023-03-01-Grupuri.md
+++ b/_posts/2023-03-01-Grupuri.md
@@ -56,3 +56,53 @@ Cum compusa a doua aplicatii bijective este o aplicatie bijectiva, rezulta ca G3
 Cum compunerea aplicatiilor este asociativa si 1E = α apartine lui G3, rezulta ca (G3,*) este monoid. Sa observam pe tabla de compozitie ca orice element este simetrizabil. Un monoid G cu proprietatea ca orice element x apartine lui G este simetrizabil in raport cu operatia acestuia se numeste GRUP.
 
 2) (Z,+) este grup abelian, numit grupul aditiv al numerelor intregi. Analog: (Q,+),(R,+),(C,+).
+
+# Problems:
+
+1) Pe Q, se defineste  legea de compozitie:
+x * y = x + y - xy/2. Fie G = Q - {2}. Sa se arate ca (G,*) este grup abelian.
+
+```
+Let's prove:
+i) asociativitatea
+ii) element neutru
+iii) orice element este simetrizabil
+```
+
+i) (x * y ) * z = x * (y * z )
+
+```
+(x * y ) * z = ( x + y - xy/2 ) * z =>
+
+x + y - xy/2 + z - (x + y - xy/2)z/2 =
+
+x + y - xy/2 + z - (2xz + 2yz - xyz)/4 =
+
+4x + 4y - 2xy + 4z - 2xz - 2yz - xyz
+
+x * (y * z) = x * (y + z - yz/2) =
+
+x + y + z - yz/2 - x (y + z - yz/2) / 2 =
+
+x + y + z - yz/2 - x (2y + 2z - yz/2) / 2 =
+
+(2x + 2y + z - yz)/2 - x ((4y + 4z - yz)/4 =
+
+4x + 4y + 2z - 2yz - 4xy - 4xz + 4yz
+```
+
+ii) element neutru
+
+```
+e = 0
+x * y = x + y - xy/2
+x * e = x + 0 - x0/2 = x
+```
+iii) elemente simetrizabile
+```
+x * x' = e
+x * x' = x + x' - xx'/2 = 0
+=> 2x + 2x' - xx' = 0 | -1 =>
+=> -2x -2x' + xx' = 0 => x'(x-2) = 2x =>
+x' = x - 2 / 2x, x!=2
+```
