--- a/_posts/2023-02-23-inele.md
+++ b/_posts/2023-02-23-inele.md
@@ -3,3 +3,76 @@ layout: post
 disqus: y
 title: Inele si corpuri
 ---
+Structura algebrica de inel s-a degajat initial in cadrul teoriei numerelor, unde a aparut sub numele de inel de numere, prototipul fiind Z luat impreuna cu o operatie de adunare si inmutire a numerelor intregi.
+
+```
+Z x Z -> Z, (x,y) ---> x + y
+respectiv
+Z x Z --> Z, xy
+```
+Ulterior, notiunea de inel a avut numeroase aplicatii in diferite domenii ale Algebrei (inele de polinoame, inele de matrice), in Analiza Matematica (inele de functii), in Logica Matematica (inele boolene).
+
+# Definitie
+O multime nevida A, luat impreuna cu doua legi de compozitie (adunarea si inmultirea)
+```
+A x Z -> A, (x,y) ---> x + y
+respectiv
+A x A --> A, (x,y), xy
+```
+se numeste inel daca:
+
+G) (A,+) este grup abelian
+M) (A,*) este monoid,
+D) inmultirea este distributiva fata de adunare, anume:
+
+```
+x(y+z) = xy + xz, (y + x)x = yx + zx , oricare ar fi x,y,z din A.
+```
+
+Afirmatia ca (A,+) este grup abelian revine la faptul ca adunarea inelului satisface axiomele:
+
+* G1) (x + y) + z = x + (y + z), oricare ar fi x,y,z din A.
+* G2) exista 0 apartine lui A a.i.0 + x = x + 0 = x oricare x din A
+* G3) oricare ar fi x din A, exista un x'din A, astfel incat x'+x = x + x' = 0
+* G4) x + y = y + x, x,y din A
+
+Afirmatia (A,*) este monoid revine la faptul ca inmultirea inelului satisface axiomele:
+
+* M1) (xy)z = x(yz)
+* M2) exista 1 apartine lui A a.i. 1 * x = x * 1=x, oricare ar fi x din A
+
+Vom spune ca (A,+) este grupul aditiv al inelului A.
+Ansamblul de conditii G1-G4 si M1, M2 si D poarta numele
+de axiomenele inelului. Elementele 0 si 1 sunt unic determinate si se numeste elementul zero, respectiv elementul unitate al inelului A. Inelul se numeste
+finit daca are un numar finit de elemente. Elementele x din A simetrizabile in raport cu inmultirea se numesc elemente inversabile sau unitati ale inelului.
+
+Daca inmultirea inelului satisface si conditia:
+* M3) xy = yx oricare x,y din A spunem
+ca inelul este comutativ.
+
+# Definitie:
+Spunem ca A este inel fara divizori ai lui zero
+daca x!=0 si y!=0 => xy != 0
+
+Un inel comutativ cu cel putin doua element si fara divizori ai lui zero se numeste domeniu de integritate.
+
+# Exemples:
+
+* 1) Inelul (Z,+,*) al intregilor rationali.
+* 2) Inelul Z[i] al intregilor lui Gauss.
+Fie Z[i] multimea tuturor numerelor complexe de forma
+a + bi, cu a si b din Z, numite intregi ai lui Gauss. Daca a + bi si c + di din Z[i], atunci:
+
+```
+(a + bi) + (c + di) = (a + c) + (b + d)i apartine lui Z[i]
+si
+(a + bi) + (c + di) = (ac - bd) + (bd + bc)i apartine lui Z[i]
+```
+Rezulta ca Z[i] este parte stabila a lui C in raport cu adunarea si inmultirea numerelor complexe. Evident
+operatiile induse verifica axiomele G1,G4,M1,M3 si D.
+Cum 0 = 0 + 0 i si 1 = 1 + 0 i rezulta ca aceste operatii verifica si axiomele G3 si M2. In fine, pentru orice
+z = a + bi din Z avem -z = (-a) + (-b)i din Z[i], deci este verificata si axioma G2. Asadar Z[i] este inel comutativ in raport cu operatiile induse pe Z[i] de adunare si inmutirea numerelor complexe, numit inelul intregilor lui Gauss.
+
+* 3) Inelul (Rn,&,%) claselor de resturi modulo n.
+
+* 4) Inelul matricelor patratice.
