morfisme de inele si corpuri

--- a/_posts/2023-02-23-inele.md
+++ b/_posts/2023-02-23-inele.md
@@ -56,6 +56,10 @@ daca x!=0 si y!=0 => xy != 0
 
 Un inel comutativ cu cel putin doua element si fara divizori ai lui zero se numeste domeniu de integritate.
 
+# Reguli de calcul intr-un inel
+```
+```
+
 # Exemples:
 
 * 1) Inelul (Z,+,*) al intregilor rationali.
@@ -76,3 +80,30 @@ z = a + bi din Z avem -z = (-a) + (-b)i din Z[i], deci este verificata si axioma
 * 3) Inelul (Rn,&,%) claselor de resturi modulo n.
 
 * 4) Inelul matricelor patratice.
+
+## Corpuri
+
+Un cadru ideal pentru perfectionarea calculelor algebrice este dat de inelele cu proprietatea ca orice element diferit de 0 este simetrizabil in raport cu inmultirea. Asemenea inele sunt cunoscute sub numele de corpuri.
+
+# Definitie:
+Un inel K se numeste corp daca 0!=1 si orice element x apartine lui K, x!=0 este simetrizabil  in raport cu inmultirea.
+
+oricarea ar fi x din k, x!=0 => exista x^-1x = xx^-1 = 1
+
+Un corp se numeste comutativ daca inmultirea sa este comutativa.
+
+# Proprietati:
+
+1) Corpurile nu au divizori ai lui zero. Intr-adevar daca x,y apartin lui K si x!=0 si y!=0, atunci xy!=0 caci daca xy=0 deducem
+y = 1y = (x^-1x)y = x^-1(xy) = 0, deci y = 0, contradictie.
+
+2) Elementele diferite de zero dintr-un corp formeaza grup fata de inmultire. Intr-adevar, fi K un corp si K* = K \ {0}. din
+proprietatea 1 rezulta ca K * este parte stabila a lui K in raport cu inmultirea. Cum 1!=0 rezulta ca 1 apartine lui K *. Atunci x!=0 este asociativa si admite pe 1 ca element neutru. Fie x apartine lui K *. Atunci x!=0 si fie x^-1 inversul in raport cu inmultirea in K. Cum x^-1x =1 !=0 rezulta ca x^-1 != 0 deci x^-1 apartine lui K *. Evident x^-1 este inversul lui x si in raport cu operatia indusa. Deci (K *,.)este grup, numit grupul multiplicativ al corpului K.
+
+# Exemple:
+
+1) (R,+,.) Corpul numerelor reale
+2) (Q,+,.) Corpul numerelor rationale,
+3) (C,+,.) Corpul numerelor complexe
+4) Corpurile numerelor patratice Q(sqrt(d))
+5) Corpul Zp al claselor de resturi modulo p.
