--- a/_posts/2023-03-11-automa.md
+++ b/_posts/2023-03-11-automa.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 disqus: y
-title: Elemente de teoria generala a automatelor
+title: Elemente de teorie generala a automatelor
 ---
 
 Conceptul de automat ocupa un loc central din punct de vedere teoretic in cadrul unei clase mai largi de sisteme automate, deoarece acestea sunt componente de baza in realizarea fizica a unor structuri programabile secventiale de mare complexitate.
